--- a/uppasd/Heis2D/ShowLattice.ipynb
+++ b/uppasd/Heis2D/ShowLattice.ipynb
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fce20cee670>"
+       "<matplotlib.colorbar.Colorbar at 0x7f7bb0f15490>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
